date range field alpha

--- a/config/development/settings.json
+++ b/config/development/settings.json
@@ -1,6 +1,10 @@
 {
   "public": {
+    "skin":"blue",
+    "siteName":"Coastal Accounting"
   },
+  "emailDomains":[
+    "coas.co.za"
+  ]
 
-  "sample": "value"
 }
