--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,10 @@
 {
   "public": {
+    "skin":"blue",
+    "siteName":"Coastal Accounting"
+  },
+  "emailDomains":[
+    "coas.co.za"
+  ]
 
-  }
 }
