--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "batchelor": "^2.0.1",
     "emitter": "0.0.5",
+    "fibers": "^1.0.10",
     "fluent-ffmpeg": "^2.0.1",
     "jquery": "^2.2.2",
     "meteor-node-stubs": "^0.2.1",
