fixes to login conf

--- a/config/development/settings.json
+++ b/config/development/settings.json
@@ -1,10 +1,9 @@
 {
   "public": {
     "skin":"blue",
-    "siteName":"Coastal Accounting"
+    "siteName":"Local test"
   },
   "emailDomains":[
-    "coas.co.za"
   ]
 
 }
