--- a/config/production/settings.json
+++ b/config/production/settings.json
@@ -1,10 +1,9 @@
 {
   "public": {
     "skin":"blue",
-    "siteName":"Coastal Accounting"
+    "siteName":""
   },
   "emailDomains":[
-    "coas.co.za"
   ]
 
 }
