removed accounts-password for now

--- a/app/config.push.json
+++ b/app/config.push.json
@@ -3,5 +3,9 @@
     "apiKey": "AIzaSyB5NPoLm8r3GFTpf52TnoJGgOa_9063lEM",
     "projectNumber": 860501809416
   },
-  "production": true
+  "production": true,
+  "badge": true,
+  "sound": true,
+  "alert": true,
+  "vibrate": true
 }
