alpha rollout for date range notifications

--- a/app/config.push.json
+++ b/app/config.push.json
@@ -1,7 +1,7 @@
 {
   "gcm": {
-    "apiKey": "AIzaSyB5NPoLm8r3GFTpf52TnoJGgOa_9063lEM",
-    "projectNumber": 860501809416
+    "apiKey": "AIzaSyBR0i2SrwAqSPSL_yo6A9qrvcvRXMf-BD4",
+    "projectNumber": "669341428356"
   },
   "production": true,
   "badge": true,
