--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
   "public": {
-    "skin":"blue",
-    "siteName":"localelcoin.co.za"
+    "skin":"green",
+    "siteName":"localelcoins.com"
   },
   "emailDomains":[
   ]
