--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "meteor-node-stubs": "^0.2.1",
     "musicmetadata": "^2.0.2",
     "props": "^0.3.0",
+    "slick": "^1.12.2",
     "stream": "^0.0.2"
   },
   "devDependencies": {},
