--- a/app/package.json
+++ b/app/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "mobile-config.js",
   "dependencies": {
+    "babel-runtime": "^6.18.0",
     "batchelor": "^2.0.1",
     "delayed-stream": "^1.0.0",
     "emitter": "0.0.5",
+    "eslint": "^3.9.1",
+    "eslint-plugin-jsx-a11y": "^3.0.1",
     "fluent-ffmpeg": "^2.0.1",
     "jquery": "^2.2.2",
     "jquery-color": "^1.0.0",
@@ -19,21 +22,7 @@
     "temp": "^0.8.3"
   },
   "devDependencies": {},
-  "scripts": {
-  },
-  "eslintConfig": {
-    "plugins": [
-      "meteor"
-    ],
-    "extends": [
-      "airbnb",
-      "plugin:meteor/recommended"
-    ],
-    "settings": {
-      "import/resolver": "meteor"
-    },
-    "rules": {}
-  },
+  "scripts": {},
   "author": "",
   "license": "ISC"
 }
