--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "emitter": "0.0.5",
     "eslint": "^3.9.1",
     "eslint-plugin-jsx-a11y": "^3.0.1",
+    "faststart": "^1.0.0",
     "fluent-ffmpeg": "^2.0.1",
     "jquery": "^2.2.2",
     "jquery-color": "^1.0.0",
