--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,8 @@
     "eslint-plugin-jsx-a11y": "^1.2.0",
     "faststart": "^1.0.0",
     "fluent-ffmpeg": "^2.1.0",
+    "google-cloud": "^0.49.0",
+    "googleapis": "^18.0.0",
     "jquery": "^2.2.2",
     "jquery-color": "^1.0.0",
     "later": "^1.2.0",
